Ship common maps with sensible default votes

--- a/public/votes.cfg
+++ b/public/votes.cfg
@@ -4,11 +4,11 @@ clear_votes
 
 add_vote "[===] maps [===]" "sv_map"
 
-add_vote "ctf1" "sv_map ctf1"
-add_vote "ctf2" "sv_map ctf2"
-add_vote "ctf3" "sv_map ctf3"
-add_vote "ctf4" "sv_map ctf4"
-add_vote "ctf5" "sv_map ctf5_spikes"
+add_vote "ctf1" "sv_map ctf1; sv_spectator_slots 60""
+add_vote "ctf2" "sv_map ctf2; sv_spectator_slots 48"
+add_vote "ctf3" "sv_map ctf3; sv_spectator_slots 58"
+add_vote "ctf4" "sv_map ctf4; sv_spectator_slots 58"
+add_vote "ctf5" "sv_map ctf5_spikes; sv_spectator_slots 48"
 add_vote "ctf6" "sv_map ctf6"
 add_vote "ctf7" "sv_map ctf7"
 add_vote "ctf8" "sv_map ctf8"
