--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -10,7 +10,7 @@ sv_motd ""
 sv_high_bandwidth 1
 sv_join_vote_delay "0"
 
-sv_map "ctf5_spikes"
+sv_map "ctf3"
 sv_port "8309"
 
 sv_killingspree_kills 10
