--- a/public/votes.cfg
+++ b/public/votes.cfg
@@ -4,14 +4,15 @@ clear_votes
 
 add_vote "[===] maps [===]" "sv_map"
 
-add_vote "ctf1" "sv_map ctf1; sv_spectator_slots 60""
-add_vote "ctf2" "sv_map ctf2; sv_spectator_slots 48"
-add_vote "ctf3" "sv_map ctf3; sv_spectator_slots 58"
-add_vote "ctf4" "sv_map ctf4; sv_spectator_slots 58"
-add_vote "ctf5" "sv_map ctf5_spikes; sv_spectator_slots 48"
-add_vote "ctf6" "sv_map ctf6"
-add_vote "ctf7" "sv_map ctf7"
-add_vote "ctf8" "sv_map ctf8"
+add_vote "dm1" "sv_gametype dm;sv_map dm; sv_spectator_slots 62""
+add_vote "ctf1" "sv_gametype ctf;sv_map ctf1; sv_spectator_slots 60""
+add_vote "ctf2" "sv_gametype ctf;sv_map ctf2; sv_spectator_slots 48"
+add_vote "ctf3" "sv_gametype ctf;sv_map ctf3; sv_spectator_slots 58"
+add_vote "ctf4" "sv_gametype ctf;sv_map ctf4; sv_spectator_slots 58"
+add_vote "ctf5" "sv_gametype ctf;sv_map ctf5_spikes; sv_spectator_slots 48"
+add_vote "ctf6" "sv_gametype ctf;sv_map ctf6"
+add_vote "ctf7" "sv_gametype ctf;sv_map ctf7"
+add_vote "ctf8" "sv_gametype ctf;sv_map ctf8"
 add_vote "ctf4_old" "sv_map ctf4_old"
 add_vote "ctf_ambiance" "sv_map ctf_ambiance"
 add_vote "ctf_duskwood" "sv_map ctf_duskwood"
