--- a/public/votes.cfg
+++ b/public/votes.cfg
@@ -4,7 +4,7 @@ clear_votes
 
 add_vote "[===] maps [===]" "sv_map"
 
-add_vote "dm1" "sv_gametype dm;sv_map dm; sv_spectator_slots 62""
+add_vote "dm1" "sv_gametype dm;sv_map dm1; sv_spectator_slots 62""
 add_vote "ctf1" "sv_gametype ctf;sv_map ctf1; sv_spectator_slots 60""
 add_vote "ctf2" "sv_gametype ctf;sv_map ctf2; sv_spectator_slots 48"
 add_vote "ctf3" "sv_gametype ctf;sv_map ctf3; sv_spectator_slots 58"
