--- a/public/autoexec.cfg
+++ b/public/autoexec.cfg
@@ -3,4 +3,8 @@
 exec cfg/public/votes.cfg
 
 sv_tournament_mode "1"
+sv_spamprotection "0"
+
+sv_chat_ratelimit_spam "1"
+sv_chat_ratelimit_non_calls "1"
 
