--- a/public/votes.cfg
+++ b/public/votes.cfg
@@ -26,6 +26,7 @@ add_vote "ctf_mine" "sv_map ctf_mine"
 add_vote "ctf_planet" "sv_map ctf_plan_egg"
 add_vote "ctf_katm" "sv_map ctf_katm"
 add_vote "ctf_aurochs" "sv_map ctf_aurochs"
+add_vote "desertcamp" "sv_map desertcamp"
 
 add_vote "[===] scorelimit [===]" "sv_map"
 
