Fix ctf4_old_3n3test map vote

--- a/public/votes.cfg
+++ b/public/votes.cfg
@@ -27,7 +27,7 @@ add_vote "ctf_planet" "sv_map ctf_plan_egg"
 add_vote "ctf_katm" "sv_map ctf_katm"
 add_vote "ctf_aurochs" "sv_map ctf_aurochs"
 add_vote "desertcamp" "sv_map desertcamp"
-add_vote "ctf4_old_3n3test" sv_map ctf4_old_3n3test"
+add_vote "ctf4_old_3n3test" "sv_map ctf4_old_3n3test"
 
 add_vote "[===] scorelimit [===]" "sv_map"
 
