--- a/public/votes.cfg
+++ b/public/votes.cfg
@@ -59,6 +59,8 @@ exec cfg/share/votes_slots.cfg
 
 add_vote "[===] game [===]" "sv_map"
 
+add_vote "[ ] enable ready mode" "sv_player_ready_mode 1;say 0.7 players can now pause the game with f1 ready_change. And 0.6 players with the /ready chat command."
+add_vote "[ ] disable ready mode" "sv_player_ready_mode 0;say the ready_change command no longer allows pausing the game"
 add_vote "pause" "pause_game"
 add_vote "restart" "restart 10"
 add_vote "shuffle teams" "shuffle_teams"
