Add pathos score and timelimit improvements

--- a/public/votes.cfg
+++ b/public/votes.cfg
@@ -33,12 +33,9 @@ add_vote "[===] scorelimit [===]" "sv_map"
 
 add_vote "no scorelimit" "sv_scorelimit 0"
 
-add_vote "5" "sv_scorelimit 5"
 add_vote "10" "sv_scorelimit 10"
 add_vote "20" "sv_scorelimit 20"
 
-add_vote "100" "sv_scorelimit 100"
-add_vote "200" "sv_scorelimit 200"
 add_vote "300" "sv_scorelimit 300"
 add_vote "400" "sv_scorelimit 400"
 add_vote "500" "sv_scorelimit 500"
@@ -54,6 +51,7 @@ add_vote "timelimit 0" "sv_timelimit 0"
 add_vote "timelimit 10" "sv_timelimit 10"
 add_vote "timelimit 15" "sv_timelimit 15"
 add_vote "timelimit 20" "sv_timelimit 20"
+add_vote "timelimit 30" "sv_timelimit 30"
 
 exec cfg/share/votes_slots.cfg
 
