--- a/public/votes.cfg
+++ b/public/votes.cfg
@@ -25,7 +25,7 @@ add_vote "ctf_corp" "sv_map ctf_corp"
 add_vote "ctf_mine" "sv_map ctf_mine"
 add_vote "ctf_planet" "sv_map ctf_plan_egg"
 add_vote "ctf_katm" "sv_map ctf_katm"
-add_vote "ctf_aurochs" "sv_map ctf_aurochs"
+add_vote "ctf_aurochs" "sv_gametype ctf; sv_map ctf_aurochs; sv_spectator_slots 60; sv_scorelimit 600"
 add_vote "desertcamp" "sv_map desertcamp"
 add_vote "ctf4_old_3n3test" "sv_map ctf4_old_3n3test"
 
