--- a/public/votes.cfg
+++ b/public/votes.cfg
@@ -28,6 +28,7 @@ add_vote "ctf_katm" "sv_map ctf_katm"
 add_vote "ctf_aurochs" "sv_gametype ctf; sv_map ctf_aurochs; sv_spectator_slots 60; sv_scorelimit 600"
 add_vote "desertcamp" "sv_map desertcamp"
 add_vote "ctf4_old_3n3test" "sv_map ctf4_old_3n3test"
+add_vote "ctf_rabyte" "sv_gametype ctf;sv_map ctf_rabyte; sv_spectator_slots 48; sv_scorelimit 600"
 
 add_vote "[===] scorelimit [===]" "sv_map"
 
