--- a/public/autoexec.cfg
+++ b/public/autoexec.cfg
@@ -11,5 +11,7 @@ sv_chat_threshold "1500"
 sv_chat_ratelimit_spam "1"
 sv_chat_ratelimit_non_calls "1"
 
+sv_countdown_unpause "10"
+
 sv_powerups "0"
 
