--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -29,6 +29,7 @@ sv_input_fifo lib/var/server.fifo
 
 exec cfg/permissions.cfg
 exec cfg/ctf-cfg-secrets/passwords.cfg
+exec cfg/ctf-secrets-shared/passwords.cfg
 exec cfg/public/autoexec.cfg
 exec cfg/share/ddnet.cfg
 
