--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,5 @@ password.cfg
 passwords.cfg
 secret.cfg
 secrets.cfg
-ctf-cfg-secrets/
-cfg-secrets-shared/
-cfg-secrets/
+*-cfg-secrets/
 cfg-tournament/
