--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -30,6 +30,7 @@ sv_chat_initial_delay "10"
 sv_chat_ratelimit_spam "1"
 sv_chat_ratelimit_non_calls "1"
 
+sv_tournament_chat_smart 1
 sv_countdown_unpause "10"
 sv_killingspree_kills 10
 sv_powerups "0"
