--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -23,9 +23,7 @@ sv_spamprotection "0"
 sv_chat_penalty "10"
 sv_chat_threshold "1500"
 
-# should be removed when this is closed
-# https://github.com/ddnet-insta/ddnet-insta/issues/213
-sv_chat_initial_delay "10"
+sv_require_chat_flag_to_chat 1
 
 sv_chat_ratelimit_spam "1"
 sv_chat_ratelimit_non_calls "1"
