--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -33,7 +33,7 @@ sv_countdown_unpause "10"
 sv_killingspree_kills 10
 sv_powerups "0"
 
-exec votes.cfg
+exec cfg/votes.cfg
 exec cfg/permissions.cfg
 exec cfg/share/ddnet.cfg
 exec cfg/ctf-cfg-secrets/passwords.cfg
