Set gametype for all map votes

--- a/votes.cfg
+++ b/votes.cfg
@@ -13,20 +13,20 @@ add_vote "ctf5" "sv_gametype ctf;sv_map ctf5_spikes; sv_spectator_slots 48; sv_s
 add_vote "ctf6" "sv_gametype ctf;sv_map ctf6"
 add_vote "ctf7" "sv_gametype ctf;sv_map ctf7"
 add_vote "ctf8" "sv_gametype ctf;sv_map ctf8"
-add_vote "ctf4_old" "sv_map ctf4_old"
-add_vote "ctf_ambiance" "sv_map ctf_ambiance"
-add_vote "ctf_duskwood" "sv_map ctf_duskwood"
-add_vote "ctf_lava" "sv_map ctf_lava"
-add_vote "ctf_red_afternoon" "sv_map ctf_red_afternoon"
-add_vote "ctf_tantum" "sv_map ctf_tantum"
-add_vote "ctf_corp" "sv_map ctf_corp"
-add_vote "ctf_mine" "sv_map ctf_mine"
-add_vote "ctf_planet" "sv_map ctf_plan_egg"
-add_vote "ctf_katm" "sv_map ctf_katm"
+add_vote "ctf4_old" "sv_gametype ctf;sv_map ctf4_old"
+add_vote "ctf_ambiance" "sv_gametype ctf;sv_map ctf_ambiance"
+add_vote "ctf_duskwood" "sv_gametype ctf;sv_map ctf_duskwood"
+add_vote "ctf_lava" "sv_gametype ctf;sv_map ctf_lava"
+add_vote "ctf_red_afternoon" "sv_gametype ctf;sv_map ctf_red_afternoon"
+add_vote "ctf_tantum" "sv_gametype ctf;sv_map ctf_tantum"
+add_vote "ctf_corp" "sv_gametype ctf;sv_map ctf_corp"
+add_vote "ctf_mine" "sv_gametype ctf;sv_map ctf_mine"
+add_vote "ctf_planet" "sv_gametype ctf;sv_map ctf_plan_egg"
+add_vote "ctf_katm" "sv_gametype ctf;sv_map ctf_katm"
 add_vote "ctf_aurochs" "sv_gametype ctf; sv_map ctf_aurochs; sv_spectator_slots 60; sv_scorelimit 600"
 add_vote "ctf_choco" "sv_gametype ctf; sv_map ctf_choco; sv_spectator_slots 58; sv_scorelimit 600"
 add_vote "ctf_infiltrate" "sv_gametype ctf; sv_map ctf_infiltrate; sv_spectator_slots 58; sv_scorelimit 600"
-add_vote "desertcamp" "sv_map desertcamp"
+add_vote "desertcamp" "sv_gametype ctf;sv_map desertcamp"
 add_vote "ctf4_old_3n3test" "sv_map ctf4_old_3n3test"
 add_vote "ctf_rabyte" "sv_gametype ctf;sv_map ctf_rabyte; sv_spectator_slots 48; sv_scorelimit 600"
 
