--- a/votes.cfg
+++ b/votes.cfg
@@ -30,6 +30,11 @@ add_vote "desertcamp" "sv_gametype ctf;sv_map desertcamp"
 add_vote "ctf4_old_3n3test" "sv_map ctf4_old_3n3test"
 add_vote "ctf_rabyte" "sv_gametype ctf;sv_map ctf_rabyte; sv_spectator_slots 48; sv_scorelimit 600"
 
+add_vote "[===] fly maps [===]" "sv_map"
+
+add_vote "flying2caramel" "sv_gametype fly;sv_map flying2caramel; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "flying2fruity" "sv_gametype fly;sv_map flying2fruity; sv_spectator_slots 60; sv_scorelimit 600"
+
 add_vote "[===] scorelimit [===]" "sv_map"
 
 add_vote "no scorelimit" "sv_scorelimit 0"
