Fix checkbox votes and add allow zoom vote
Closed #2

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -18,6 +18,8 @@ sv_region_name "ger"
 sv_sql_servername "ger"
 sv_hide_score "0"
 
+sv_vote_checkboxes 0
+
 sv_tournament_mode "1"
 sv_spamprotection "0"
 sv_chat_penalty "10"
@@ -32,6 +34,11 @@ sv_tournament_chat_smart 1
 sv_countdown_unpause "10"
 sv_killingspree_kills 10
 sv_powerups "0"
+
+sv_player_ready_mode "1"
+
+sv_vote_checkboxes 1
+sv_vote_checkboxes 1
 
 exec cfg/votes.cfg
 exec cfg/permissions.cfg
