--- a/votes.cfg
+++ b/votes.cfg
@@ -63,8 +63,12 @@ exec cfg/share/votes_slots.cfg
 
 add_vote "[===] game [===]" "sv_map"
 
-add_vote "[ ] enable ready mode" "sv_player_ready_mode 1;say 0.7 players can now pause the game with f1 ready_change. And 0.6 players with the /ready chat command."
-add_vote "[ ] disable ready mode" "sv_player_ready_mode 0;say the ready_change command no longer allows pausing the game"
+add_vote "[ ] ready mode: ON" "sv_player_ready_mode 1;say 0.7 players can now pause the game with f1 ready_change. And 0.6 players with the /ready chat command."
+add_vote "[ ] ready mode: OFF" "sv_player_ready_mode 0;say the ready_change command no longer allows pausing the game"
+
+add_vote "[ ] allow zoom: ON" "sv_allow_zoom 1"
+add_vote "[ ] allow zoom: OFF" "sv_allow_zoom 0"
+
 add_vote "pause" "pause_game"
 add_vote "restart" "restart 10"
 add_vote "shuffle teams" "shuffle_teams"
