require restart to play real rounds

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -34,6 +34,8 @@ sv_tournament_chat_smart 1
 sv_countdown_unpause "10"
 sv_killingspree_kills 10
 sv_powerups "0"
+# require restart to be able to win rounds
+sv_casual_rounds "0"
 
 sv_player_ready_mode "1"
 
