--- a/votes.cfg
+++ b/votes.cfg
@@ -69,6 +69,9 @@ add_vote "[ ] ready mode: OFF" "sv_player_ready_mode 0;say the ready_change comm
 add_vote "[ ] allow zoom: ON" "sv_allow_zoom 1"
 add_vote "[ ] allow zoom: OFF" "sv_allow_zoom 0"
 
+add_vote "[ ] mute spectators: ON" "sv_tournament_chat_smart 1;sv_tournament_chat 1"
+add_vote "[ ] mute spectators: OFF" "sv_tournament_chat_smart 0;sv_tournament_chat 0"
+
 add_vote "pause" "pause_game"
 add_vote "restart" "restart 10"
 add_vote "shuffle teams" "shuffle_teams"
