--- a/votes.cfg
+++ b/votes.cfg
@@ -6,6 +6,7 @@ add_vote "[===] maps [===]" "sv_map"
 
 add_vote "dm1" "sv_gametype dm;sv_map dm1; sv_spectator_slots 62;sv_scorelimit 10"
 add_vote "ctf1" "sv_gametype ctf;sv_map ctf1; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "ctf1left" "sv_gametype ctf;sv_map ctf1left; sv_spectator_slots 60; sv_scorelimit 600"
 add_vote "ctf2" "sv_gametype ctf;sv_map ctf2; sv_spectator_slots 48; sv_scorelimit 600"
 add_vote "ctf3" "sv_gametype ctf;sv_map ctf3; sv_spectator_slots 58; sv_scorelimit 600"
 add_vote "ctf4" "sv_gametype ctf;sv_map ctf4; sv_spectator_slots 58; sv_scorelimit 600"
