--- a/votes.cfg
+++ b/votes.cfg
@@ -25,6 +25,7 @@ add_vote "ctf_infiltrate" "sv_gametype ctf; sv_map ctf_infiltrate; sv_spectator_
 add_vote "desertcamp" "sv_gametype ctf;sv_map desertcamp"
 add_vote "ctf4_old_3n3test" "sv_map ctf4_old_3n3test"
 add_vote "ctf_alu" "sv_gametype ctf;sv_map ctf_alu; sv_spectator_slots 58; sv_scorelimit 600"
+add_vote "ctf_schein" "sv_gametype ctf;sv_map ctf_schein; sv_spectator_slots 60; sv_scorelimit 600"
 add_vote "mini4old" "sv_gametype ctf;sv_map mini4old; sv_spectator_slots 60; sv_scorelimit 600"
 add_vote "ctf_rabyte" "sv_gametype ctf;sv_map ctf_rabyte; sv_spectator_slots 48; sv_scorelimit 600"
 
