--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -10,6 +10,7 @@ sv_motd ""
 sv_input_fifo lib/var/server.fifo
 sv_high_bandwidth 1
 sv_join_vote_delay "0"
+sv_sixup 1
 
 sv_map "ctf3"
 sv_port "8309"
