--- a/votes.cfg
+++ b/votes.cfg
@@ -12,7 +12,7 @@ add_vote "ctf3" "sv_gametype ctf;sv_map ctf3; sv_spectator_slots 58; sv_scorelim
 add_vote "ctf4" "sv_gametype ctf;sv_map ctf4; sv_spectator_slots 58; sv_scorelimit 600"
 add_vote "ctf5" "sv_gametype ctf;sv_map ctf5_spikes; sv_spectator_slots 48; sv_scorelimit 600"
 add_vote "ctf6" "sv_gametype ctf;sv_map ctf6"
-add_vote "ctf7" "sv_gametype ctf;sv_map ctf7"
+add_vote "ctf7" "sv_gametype ctf;sv_map ctf7; sv_spectator_slots 60; sv_scorelimit 600"
 add_vote "ctf8" "sv_gametype ctf;sv_map ctf8"
 add_vote "ctf4_old" "sv_gametype ctf;sv_map ctf4_old"
 add_vote "ctf_lava" "sv_gametype ctf;sv_map ctf_lava"
