allow mods to unmute specs

--- a/permissions.cfg
+++ b/permissions.cfg
@@ -35,6 +35,8 @@ access_level sv_countdown_unpause 1
 access_level sv_countdown_round_start 1
 access_level sv_spectator_slots 1
 access_level sv_scorelimit 1
+access_level sv_tournament_chat 1
+access_level sv_tournament_chat_smart 1
 access_level sv_timelimit 1
 access_level swap_teams 1
 access_level swap_teams_random 1
