Add hammerhit map to votes

--- a/votes.cfg
+++ b/votes.cfg
@@ -4,36 +4,41 @@ clear_votes
 
 add_vote "[===] maps [===]" "sv_map"
 
-add_vote "dm1" "sv_gametype dm;sv_map dm1; sv_spectator_slots 62;sv_scorelimit 10"
-add_vote "ctf1" "sv_gametype ctf;sv_map ctf1; sv_spectator_slots 60; sv_scorelimit 600"
-add_vote "ctf1left" "sv_gametype ctf;sv_map ctf1left; sv_spectator_slots 60; sv_scorelimit 600"
-add_vote "ctf2" "sv_gametype ctf;sv_map ctf2; sv_spectator_slots 48; sv_scorelimit 600"
-add_vote "ctf3" "sv_gametype ctf;sv_map ctf3; sv_spectator_slots 58; sv_scorelimit 600"
-add_vote "ctf4" "sv_gametype ctf;sv_map ctf4; sv_spectator_slots 58; sv_scorelimit 600"
-add_vote "ctf5" "sv_gametype ctf;sv_map ctf5_spikes; sv_spectator_slots 48; sv_scorelimit 600"
-add_vote "ctf6" "sv_gametype ctf;sv_map ctf6"
-add_vote "ctf7" "sv_gametype ctf;sv_map ctf7; sv_spectator_slots 60; sv_scorelimit 600"
-add_vote "ctf8" "sv_gametype ctf;sv_map ctf8"
-add_vote "ctf4_old" "sv_gametype ctf;sv_map ctf4_old"
-add_vote "ctf_lava" "sv_gametype ctf;sv_map ctf_lava"
-add_vote "ctf_red_afternoon" "sv_gametype ctf;sv_map ctf_red_afternoon"
-add_vote "ctf_tantum" "sv_gametype ctf;sv_map ctf_tantum"
-add_vote "ctf_katm" "sv_gametype ctf;sv_map ctf_katm"
-add_vote "ctf_aurochs" "sv_gametype ctf; sv_map ctf_aurochs; sv_spectator_slots 60; sv_scorelimit 600"
-add_vote "ctf_choco" "sv_gametype ctf; sv_map ctf_choco; sv_spectator_slots 58; sv_scorelimit 600"
-add_vote "ctf_infiltrate" "sv_gametype ctf; sv_map ctf_infiltrate; sv_spectator_slots 58; sv_scorelimit 600"
-add_vote "desertcamp" "sv_gametype ctf;sv_map desertcamp"
-add_vote "ctf4_old_3n3test" "sv_map ctf4_old_3n3test"
-add_vote "ctf_brisingr" "sv_gametype ctf;sv_map ctf_brisingr; sv_spectator_slots 54; sv_scorelimit 600"
-add_vote "ctf_alu" "sv_gametype ctf;sv_map ctf_alu; sv_spectator_slots 58; sv_scorelimit 600"
-add_vote "ctf_schein" "sv_gametype ctf;sv_map ctf_schein; sv_spectator_slots 60; sv_scorelimit 600"
-add_vote "mini4old" "sv_gametype ctf;sv_map mini4old; sv_spectator_slots 60; sv_scorelimit 600"
-add_vote "ctf_rabyte" "sv_gametype ctf;sv_map ctf_rabyte; sv_spectator_slots 48; sv_scorelimit 600"
+add_vote "dm1"      "exec cfg/dm.cfg;sv_map dm1; sv_spectator_slots 62;sv_scorelimit 10"
+add_vote "ctf1"     "exec cfg/ctf.cfg;sv_map ctf1; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "ctf1left" "exec cfg/ctf.cfg;sv_map ctf1left; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "ctf2"     "exec cfg/ctf.cfg;sv_map ctf2; sv_spectator_slots 48; sv_scorelimit 600"
+add_vote "ctf3"     "exec cfg/ctf.cfg;sv_map ctf3; sv_spectator_slots 58; sv_scorelimit 600"
+add_vote "ctf4"     "exec cfg/ctf.cfg;sv_map ctf4; sv_spectator_slots 58; sv_scorelimit 600"
+add_vote "ctf5"     "exec cfg/ctf.cfg;sv_map ctf5_spikes; sv_spectator_slots 48; sv_scorelimit 600"
+add_vote "ctf6"     "exec cfg/ctf.cfg;sv_map ctf6"
+add_vote "ctf7"     "exec cfg/ctf.cfg;sv_map ctf7; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "ctf8"     "exec cfg/ctf.cfg;sv_map ctf8"
+
+add_vote "ctf4_old"          "exec cfg/ctf.cfg;sv_map ctf4_old"
+add_vote "ctf_lava"          "exec cfg/ctf.cfg;sv_map ctf_lava"
+add_vote "ctf_red_afternoon" "exec cfg/ctf.cfg;sv_map ctf_red_afternoon"
+add_vote "ctf_tantum"        "exec cfg/ctf.cfg;sv_map ctf_tantum"
+add_vote "ctf_katm"          "exec cfg/ctf.cfg;sv_map ctf_katm"
+add_vote "ctf_aurochs"       "exec cfg/ctf.cfg;sv_map ctf_aurochs; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "ctf_choco"         "exec cfg/ctf.cfg;sv_map ctf_choco; sv_spectator_slots 58; sv_scorelimit 600"
+add_vote "ctf_infiltrate"    "exec cfg/ctf.cfg;sv_map ctf_infiltrate; sv_spectator_slots 58; sv_scorelimit 600"
+add_vote "desertcamp"        "exec cfg/ctf.cfg;sv_map desertcamp"
+add_vote "ctf4_old_3n3test"  "exec cfg/ctf.cfg;sv_map ctf4_old_3n3test"
+add_vote "ctf_brisingr"      "exec cfg/ctf.cfg;sv_map ctf_brisingr; sv_spectator_slots 54; sv_scorelimit 600"
+add_vote "ctf_alu"           "exec cfg/ctf.cfg;sv_map ctf_alu; sv_spectator_slots 58; sv_scorelimit 600"
+add_vote "ctf_schein"        "exec cfg/ctf.cfg;sv_map ctf_schein; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "mini4old"          "exec cfg/ctf.cfg;sv_map mini4old; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "ctf_rabyte"        "exec cfg/ctf.cfg;sv_map ctf_rabyte; sv_spectator_slots 48; sv_scorelimit 600"
 
 add_vote "[===] fly maps [===]" "sv_map"
 
-add_vote "flying2caramel" "sv_gametype fly;sv_map flying2caramel; sv_spectator_slots 60; sv_scorelimit 600"
-add_vote "flying2fruity" "sv_gametype fly;sv_map flying2fruity; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "flying2caramel" "exec cfg/fly.cfg;sv_map flying2caramel; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "flying2fruity"  "exec cfg/fly.cfg;sv_map flying2fruity; sv_spectator_slots 60; sv_scorelimit 600"
+
+add_vote "[===] ddrace maps [===]" "sv_map"
+
+add_vote "team0ctf" "exec cfg/ddctf.cfg;sv_map team0ctf; sv_spectator_slots 60; sv_scorelimit 200"
 
 add_vote "[===] scorelimit [===]" "sv_map"
 
@@ -80,6 +85,6 @@ add_vote "reload server" "reload"
 
 add_vote "[===] gametype [===]" "sv_map"
 
-add_vote "CTF" "sv_gametype ctf;reload"
-add_vote "DM" "sv_gametype dm;reload"
+add_vote "CTF" "exec cfg/ctf.cfg;reload"
+add_vote "DM"  "exec cfg/dm.cfg;reload"
 
