launch server with full ctf3 settings

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -13,6 +13,9 @@ sv_join_vote_delay "0"
 sv_sixup 1
 
 sv_map "ctf3"
+sv_spectator_slots 58
+sv_scorelimit 600
+
 sv_port "8309"
 
 sv_region_name "ger"
