--- a/votes.cfg
+++ b/votes.cfg
@@ -29,6 +29,7 @@ add_vote "ctf_brisingr"      "exec cfg/ctf.cfg;sv_map ctf_brisingr; sv_spectator
 add_vote "ctf_alu"           "exec cfg/ctf.cfg;sv_map ctf_alu; sv_spectator_slots 58; sv_scorelimit 600"
 add_vote "ctf_schein"        "exec cfg/ctf.cfg;sv_map ctf_schein; sv_spectator_slots 60; sv_scorelimit 600"
 add_vote "mini4old"          "exec cfg/ctf.cfg;sv_map mini4old; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "ctf_horny"         "exec cfg/ctf.cfg;sv_map ctf3; sv_spectator_slots 58; sv_scorelimit 600"
 add_vote "ctf_rabyte"        "exec cfg/ctf.cfg;sv_map ctf_rabyte; sv_spectator_slots 48; sv_scorelimit 600"
 
 add_vote "[===] fly maps [===]" "sv_map"
