--- a/votes.cfg
+++ b/votes.cfg
@@ -76,6 +76,10 @@ add_vote "[ ] ready mode: OFF" "sv_player_ready_mode 0;say the ready_change comm
 add_vote "[ ] allow zoom: ON" "sv_allow_zoom 1"
 add_vote "[ ] allow zoom: OFF" "sv_allow_zoom 0"
 
+
+add_vote "[ ] swap flags: ON"  "sv_swap_flags 1"
+add_vote "[ ] swap flags: OFF" "sv_swap_flags 0"
+
 add_vote "[ ] mute spectators: ON" "sv_tournament_chat_smart 1;sv_tournament_chat 1"
 add_vote "[ ] mute spectators: OFF" "sv_tournament_chat_smart 0;sv_tournament_chat 0"
 
