Use common-configs

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -48,7 +48,7 @@ sv_vote_checkboxes 1
 
 exec cfg/votes.cfg
 exec cfg/permissions.cfg
-exec cfg/share/ddnet.cfg
+exec cfg/common-configs/base/ddnet.cfg
 exec cfg/ctf-cfg-secrets/passwords.cfg
 exec cfg/shared-cfg-secrets/passwords.cfg
 
