--- a/votes.cfg
+++ b/votes.cfg
@@ -66,7 +66,7 @@ add_vote "timelimit 15" "sv_timelimit 15"
 add_vote "timelimit 20" "sv_timelimit 20"
 add_vote "timelimit 30" "sv_timelimit 30"
 
-exec cfg/share/votes_slots.cfg
+exec cfg/common-configs/votes/solts.cfg
 
 add_vote "[===] game [===]" "sv_map"
 
