--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -29,8 +29,6 @@ sv_spamprotection "0"
 sv_chat_penalty "10"
 sv_chat_threshold "1500"
 
-sv_require_chat_flag_to_chat 1
-
 sv_chat_ratelimit_spam "1"
 sv_chat_ratelimit_non_calls "1"
 
@@ -49,6 +47,7 @@ sv_vote_checkboxes 1
 exec cfg/votes.cfg
 exec cfg/permissions.cfg
 exec cfg/common-configs/base/ddnet.cfg
+exec cfg/common-configs/base/protection.cfg
 exec cfg/ctf-cfg-secrets/passwords.cfg
 exec cfg/shared-cfg-secrets/passwords.cfg
 
