--- a/votes.cfg
+++ b/votes.cfg
@@ -37,6 +37,7 @@ add_vote "[===] fly maps [===]" "sv_map"
 
 add_vote "flying2caramel" "exec cfg/fly.cfg;sv_map flying2caramel; sv_spectator_slots 60; sv_scorelimit 600"
 add_vote "flying2fruity"  "exec cfg/fly.cfg;sv_map flying2fruity; sv_spectator_slots 60; sv_scorelimit 600"
+add_vote "flying3ctf"  "exec cfg/fly.cfg;sv_map flying3ctf; sv_spectator_slots 60; sv_scorelimit 600"
 
 add_vote "[===] ddrace maps [===]" "sv_map"
 
