--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -46,6 +46,7 @@ sv_vote_checkboxes 1
 
 exec cfg/votes.cfg
 exec cfg/permissions.cfg
+exec cfg/common-configs/base/rules.cfg
 exec cfg/common-configs/base/ddnet.cfg
 exec cfg/common-configs/base/protection.cfg
 exec cfg/ctf-cfg-secrets/passwords.cfg
